--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
         <h1>A que nos dedicamos</h1>
         <li>
           <img
-            src="Imagenes/001 (1).jpg"
+            src="images/img_1.jpg"
             width="200"
             alt="typing on keyboard"
           />
         </li>
         <li>
-          <img src="Imagenes/002 (1).jpg" width="200" alt="checking phone" />
+          <img src="images/img_2.jpg" width="200" alt="checking phone" />
         </li>
         <li>
           <img
-            src="Imagenes/003 (1).jpg"
+            src="images/img_3.jpg"
             width="200"
             alt="Looking at the design"
           />
@@ -88,22 +88,22 @@
         <h1>Nuestro Equipo</h1>
         <ul>
           <li>
-            <img src="Imagenes/1.jpg" width="200" />
+            <img src="images/team_1.jpg" width="200" />
             <h3>Andres Cubo</h3>
             <p>Diseñadora de Producto</p>
           </li>
           <li>
-            <img src="Imagenes/2 (1).jpg" width="200" />
+            <img src="images/Team_2.jpg" width="200" />
             <h3>Carla palacios</h3>
             <p>Diseñadora Frontend</p>
           </li>
           <li>
-            <img src="Imagenes/3 (1).jpg" width="200" />
+            <img src="images/team_3.jpg" width="200" />
             <h3>Marcos Dorado</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="Imagenes/4 (1).jpg" width="200" />
+            <img src="images/team_4.jpg" width="200" />
             <h3>Pablo Mijangos</h3>
             <p>Diseñador IU</p>
           </li>
